crates/rargs/tests/snapshots/test_scripts__stdout flags.sh --falsy.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] flags.sh --falsy"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
falsy == 1
truthy == false
shorty == false
