crates/rargs/tests/snapshots/test_scripts__stdout flags.sh -h.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] flags.sh -h"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Flags examples

This script shows different ways of working with truthy or falsy flags.
By default, flags are truthy if they are passed as an option, and empty
otherwise. If you would like your flag to be true by default, provide a
default value when defining the flag. This will enable the ability to
provide a negated version of the flag, using a '--no-' or '-n-' prefix
for the long and short version of the flag.

This script exposes three flags that showcase this behavior.

  1. `falsy` : Default flag that is set to `false` by default.
  2. `truthy`: Flag with a default value that is considered `truthy`
               by default.
  3. `shorty`: Same as the `truthy` flag but configured to also use
               a short version of the flag.
printf  minimal [OPTIONS]
  minimal -h|--help
  minimal -v|--version

[4mExamples:[0m
  minimal --falsy
    Set the `falsy` flag to `true`
  minimal --no-truthy
    Set the `truthy` flag to `false`
  minimal --no-shorty
    Set the `shorty` flag to `false`
  minimal -n-s
    Set the `shorty` flag to `false` using the short name

[4mOptions:[0m
  --falsy
    Falsy flag
  -no-s --no-shorty
    Shorty flag
  --no-truthy
    Truthy flag
  -h --help
    Print help
  -v --version
    Print version
