crates/rargs/tests/snapshots/test_scripts__stdout hello-world.sh -help.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] hello-world.sh -help"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Hello World script

[4mUsage:[0m
  hello-world [OPTIONS]
  hello-world -h|--help
  hello-world -v|--version

[4mOptions:[0m
  -h --help
    Print help
  -v --version
    Print version

