crates/rargs/tests/snapshots/test_scripts__stdout no-first-option-help-global.sh --help.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] no-first-option-help-global.sh --help"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Script to test if the 'first-option-help' rule is working.

[4mUsage:[0m
  First option help [OPTIONS] [COMMAND] [COMMAND_OPTIONS]
  First option help -h|--help
  First option help --version

[4mCommands:[0m
  download .... Download a file
  upload ...... Upload a file

[4mOptions:[0m
  -v --verbose
    Verbose mode
  -h --help
    Print help
  --version
    Print version

